# ivs-projekt-2

./: .editorconfig  .gitignore  CMakeLists.txt  IVS_Calc-0.69.42-Linux.deb  IVS_Calc.desktop  IVS_Calc_profiling-0.69.42-Linux.deb  LICENSE  README.md  hodnoceni.txt  odevzdani.txt  skutecnost.txt
plan/: xnemecv00_xnovype00_xdrdlat00_xmandym00.txt
profiling/: operation.h  profiling  profiling.c  vystup.txt
src/: Doxyfile  Makefile  main.c
src/backend/: operation.c  operation.h  operation_tests.c
src/frontend/: layout_name.c  main.c  operation.h
